--- a/styles/notion.css
+++ b/styles/notion.css
@@ -8,8 +8,8 @@
  */
 
 .notion {
-  --notion-max-width: 720px;
-  --notion-header-height: 54px;
+  --notion-max-width: 100%;
+  --notion-header-height: 100%;
 }
 
 .notion-frame {
@@ -22,7 +22,7 @@
 }
 
 .index-page {
-  --notion-max-width: 900px;
+  --notion-max-width: 100%;
 }
 
 .notion-text {
